[gd_scene load_steps=5 format=3 uid="uid://5yqo5qdatolj"]

[ext_resource type="Script" uid="uid://ckas5ws2fy3ko" path="res://Scenes/Game/game.gd" id="1_i1e5p"]
[ext_resource type="Texture2D" uid="uid://dcuda5xfl52lv" path="res://assets/background/rocks_2.png" id="1_mv0hc"]
[ext_resource type="PackedScene" uid="uid://c1s576lntimtn" path="res://Scenes/Plane/plane.tscn" id="2_qxfds"]
[ext_resource type="PackedScene" uid="uid://c41kkk08ctyxv" path="res://Scenes/barrier/barrier.tscn" id="3_qikps"]

[node name="Game" type="Node2D"]
script = ExtResource("1_i1e5p")

[node name="Rocks2" type="Sprite2D" parent="."]
position = Vector2(8, 354)
texture = ExtResource("1_mv0hc")

[node name="Plane" parent="." instance=ExtResource("2_qxfds")]
position = Vector2(236, 81)

[node name="Barrier" parent="." instance=ExtResource("3_qikps")]

[node name="PipesHolder" type="Node" parent="."]

[node name="spawntimer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="upper" type="Marker2D" parent="."]
position = Vector2(728, 225)

[node name="lower" type="Marker2D" parent="."]
position = Vector2(737, 582)

[connection signal="on_plane_died" from="Plane" to="." method="_on_plane_died"]
[connection signal="timeout" from="spawntimer" to="." method="_on_spawntimer_timeout"]
